--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "three": "^0.175.0"
+    "react-tsparticles": "^2.12.2",
+    "three": "^0.175.0",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
